dashboard/ingress_nextcloud.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: next-cloud-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: drive.mechatronica-pro
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: cloud-nextcloud
            port:
              number: 8080
status:
  loadBalancer:
    ingress:
    - ip: 192.168.3.160
